# optimiluca

./: .gitignore  ;  CMakeLists.txt  Makefile  README.md  \
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  Optimiluca.cpp
src/optilib/: CMakeLists.txt  Lumath.cpp  Lumath.hpp  Solver.cpp  Solver.hpp  State.cpp  State.hpp
src/utils/: CLIWrapper.cpp  CLIWrapper.hpp  CMakeLists.txt
